[project]
name = "general"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.4",
    "deeplake>=4.1.17",
    "deepspeed>=0.16.5",
    "neural-compressor>=3.3.1",
    "onnx>=1.17.0",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "peft>=0.15.1",
    "scipy>=1.15.2",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
    "trl>=0.16.1",
    "wandb>=0.19.9",
]
